.helm/templates/002-jobs-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jobs-db
  name: jobs-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-db
  template:
    metadata:
      labels:
        app: jobs-db
    spec:
      containers:
      - image: postgres:14.6
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: jobs-db-data
      volumes:
      - name: jobs-db-data
        emptyDir: {} 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jobs-db
  name: jobs-db
spec:
  type: ClusterIP
  ports:
  - name: "jobs-db-service"
    port: 5432
    targetPort: 5432
  selector:
    app: jobs-db
