.helm/templates/010-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hse-skitle
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: jobs.skitle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jobs
            port:
              number: 8080
  - host: auth.skitle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8080
